# typesensei

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  partial.rs  schema.rs
src/api/: mod.rs
src/api/alias/: mod.rs
src/api/collection/: mod.rs
src/api/documents/: batch.rs  mod.rs
src/api/keys/: mod.rs
src/client/: builder.rs  mod.rs  node_config.rs
src/state/: field.rs  mod.rs  ordered.rs  query.rs
tests/: derive.rs
typesensei/: Cargo.toml
typesensei/src/: field_state.rs  lib.rs  schema.rs
typesensei/src/api/: mod.rs
typesensei/src/api/collection/: mod.rs
typesensei/src/api/collection/document/: action.rs  batch.rs  mod.rs
typesensei/src/api/collections/: create.rs  mod.rs
typesensei/src/api/documents/: batch.rs  mod.rs
typesensei/src/api/keys/: mod.rs
typesensei/src/client/: builder.rs  mod.rs
typesensei/src/state/: field.rs  mod.rs
typesensei/tests/: derive.rs
typesensei_derive/: Cargo.toml
typesensei_derive/src/: lib.rs
typesensei_derive/src/implementation/: case.rs  field.rs  impl_from.rs  impl_model.rs  impl_typesense.rs  mod.rs  parse.rs  struct_model.rs  translate.rs
typesensei_derive/src/implementation/implement/: impl_partial.rs  impl_typesense.rs  mod.rs
typesensei_derive/src/implementation/parse/: mod.rs  struct_parser.rs
typesensei_derive/src/implementation/translate/: impl_from.rs  impl_model.rs  impl_query.rs  impl_typesense.rs  mod.rs  struct_model.rs  struct_query.rs
