[package]
name = "typesensei"
version = "0.1.16"
edition = "2021"
authors = ["PoOnesNerfect <jack.y.l.dev@gmail.com>"]
description = "Typesense client library"
documentation = "https://docs.rs/typesensei/"
repository = "https://github.com/PoOnesNerfect/typesensei"
homepage = "https://github.com/PoOnesNerfect/typesensei"
license = "MIT"
readme = "../README.md"
categories = ["web-programming", "api-bindings"]
keywords = ["typesense"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typesensei_derive = { version = "=0.1.16", path = "typesensei_derive" }

bytes = { version = "1.6" }
derivative = { version = "2.2.0" }
base64 = { version = "0.22" }
hmac = { version = "0.12" }
sha2 = { version = "0.10" }
itertools = { version = "0.13" }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_with = { version = "3.8" }

borrowme = { version = "0.0.14" }
paste = "1.0"
thiserror = "1.0"
tosserror = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
