[package]
name = "typesensei"
version = "0.1.5"
edition = "2021"
authors = ["PoOnesNerfect <jack.y.l.dev@gmail.com>"]
description = "Typesense client library"
documentation = "https://docs.rs/typesensei/"
repository = "https://github.com/PoOnesNerfect/typesensei"
homepage = "https://github.com/PoOnesNerfect/typesensei"
license = "MIT"
readme = "../README.md"
categories = ["web-programming", "api-bindings"]
keywords = ["typesense"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typesensei_derive = { version = "=0.1.3", path = "../typesensei_derive" }

futures = "0.3"
bytes = "1.2"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_with = { version = "2.0.1" }

paste = "1.0"
snafu = "0.7"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
tracing = "0.1.13"

[dev-dependencies]
tokio = { verion = "1", features = ["full"] }
